[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/imagenes/court.png" type="Texture" id=1]
[ext_resource path="res://environment/environment.gd" type="Script" id=2]
[ext_resource path="res://environment/marcador.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/abaddon_numeros.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 63.6563 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.125, 236.938 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.0
height = 2.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 1.32797 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 2.5, 0.5 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 2.25
height = 0.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 2.0
height = 76.0

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1.15381, 17.3945 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 17, 1.6875 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 2.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 1.99994
height = 74.0001

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 3, 0.24999 )

[node name="environment" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )

[node name="Cronometro" type="CanvasLayer" parent="." groups=["cronometro"]]
layer = 0

[node name="Tiempo" type="Label" parent="Cronometro" groups=["tiempo"]]
margin_left = 501.0
margin_top = 158.0
margin_right = 548.0
margin_bottom = 190.0
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 1, 0.152941, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "3:00"
align = 1

[node name="marcador" parent="." instance=ExtResource( 3 )]
margin_left = 440.0
margin_top = 82.0
margin_right = 751.0
margin_bottom = 132.0

[node name="borders" type="Node2D" parent="."]

[node name="bord_floor" type="StaticBody2D" parent="borders"]
collision_layer = 4
collision_mask = 3

[node name="col_bord_floor" type="CollisionShape2D" parent="borders/bord_floor" groups=["piso"]]
position = Vector2( 512, 537 )
shape = SubResource( 1 )

[node name="bord_top" type="StaticBody2D" parent="borders"]
collision_layer = 4
collision_mask = 3

[node name="col_bord_top" type="CollisionShape2D" parent="borders/bord_top"]
position = Vector2( 513, -64 )
shape = SubResource( 1 )

[node name="bord_left" type="StaticBody2D" parent="borders"]
collision_layer = 256

[node name="col_bord_left" type="CollisionShape2D" parent="borders/bord_left"]
position = Vector2( 32.875, 236.063 )
shape = SubResource( 2 )

[node name="bord_right" type="StaticBody2D" parent="borders"]
collision_layer = 256

[node name="col_bord_right" type="CollisionShape2D" parent="borders/bord_right"]
position = Vector2( 991, 236 )
shape = SubResource( 2 )

[node name="aro1" type="StaticBody2D" parent="borders"]

[node name="col_clanck" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 149, 262 )
shape = SubResource( 4 )

[node name="col_aro1" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 130.5, 291.672 )
rotation = -3.14159
shape = SubResource( 3 )

[node name="area_aro1_punto" type="Area2D" parent="borders/aro1"]
position = Vector2( 131, 283 )
rotation = -3.14159
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/aro1/area_aro1_punto"]
position = Vector2( 2.18279e-11, 0 )
shape = SubResource( 14 )
one_way_collision = true

[node name="col_clanck2" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 112, 261 )
shape = SubResource( 10 )

[node name="col_vidro1" type="CollisionShape2D" parent="borders/aro1" groups=["tablero"]]
position = Vector2( 100, 234 )
shape = SubResource( 12 )

[node name="col_antibug" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 112, 279 )
rotation = 3.14159
shape = SubResource( 16 )

[node name="col_antibug2" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 149.615, 280.5 )
rotation = 3.14159
shape = SubResource( 16 )

[node name="col_antibug3" type="CollisionShape2D" parent="borders/aro1"]
position = Vector2( 130.75, 294.688 )
rotation = -3.14159
shape = SubResource( 17 )

[node name="aro2" type="StaticBody2D" parent="borders"]
position = Vector2( 762, 3 )

[node name="col_aro2" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 131, 290 )
rotation = -3.14159
shape = SubResource( 3 )

[node name="col_clanck_2" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 149, 259 )
shape = SubResource( 11 )

[node name="col_clanck_2_2" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 113, 259 )
shape = SubResource( 4 )

[node name="col_vidrio_2" type="CollisionShape2D" parent="borders/aro2" groups=["tablero"]]
position = Vector2( 159, 229 )
rotation = -6.28318
shape = SubResource( 13 )

[node name="area_aro2_punto" type="Area2D" parent="borders/aro2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/aro2/area_aro2_punto"]
position = Vector2( 131, 283 )
rotation = -3.14159
shape = SubResource( 15 )
one_way_collision = true

[node name="col_antibug2" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 112.846, 277.211 )
rotation = 3.14159
shape = SubResource( 16 )

[node name="col_antibug" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 149.308, 277.605 )
rotation = 3.14159
shape = SubResource( 16 )

[node name="col_antibug3" type="CollisionShape2D" parent="borders/aro2"]
position = Vector2( 131, 293 )
rotation = -3.14159
shape = SubResource( 17 )

[node name="bord_punta1" type="StaticBody2D" parent="borders"]

[node name="bord_punta2" type="StaticBody2D" parent="borders"]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="borders/aro1/area_aro1_punto" to="." method="_on_area_aro1_punto_body_entered"]
[connection signal="body_entered" from="borders/aro2/area_aro2_punto" to="." method="_on_area_aro2_punto_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
